[WIT-3017, WIT-1736] Edit template for Databricks workload DLT, dots replaced by underscores